update-NCC和BIP高级版新单据抽离增加一个表参考